--- a/app/src/main/res/layout/page_main.xml
+++ b/app/src/main/res/layout/page_main.xml
@@ -65,19 +65,17 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.0" />
 
-                <Spinner
+                <EditText
                     android:id="@+id/editText2"
-                    style="@style/Platform.Widget.AppCompat.Spinner"
-                    android:layout_width="214dp"
-                    android:layout_height="43dp"
+                    android:layout_width="82dp"
+                    android:layout_height="39dp"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    android:entries="@array/num"
-                    android:spinnerMode="dropdown"
+                    android:layout_marginTop="12dp"
+                    android:inputType="numberDecimal"
                     app:layout_constraintEnd_toStartOf="@+id/button"
+                    app:layout_constraintHorizontal_bias="0.283"
                     app:layout_constraintStart_toEndOf="@+id/textView2"
-                    app:layout_constraintTop_toBottomOf="@+id/editText"
-                    tools:targetApi="lollipop" />
+                    app:layout_constraintTop_toBottomOf="@+id/editText" />
 
                 <CalendarView
                     android:id="@+id/calendar"
@@ -125,10 +123,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="56dp"
+                    android:layout_marginTop="60dp"
                     android:text="ค้นหา"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.971"
+                    app:layout_constraintHorizontal_bias="0.689"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
             </android.support.constraint.ConstraintLayout>
