--- a/app/src/main/res/layout/activity_main_home.xml
+++ b/app/src/main/res/layout/activity_main_home.xml
@@ -24,7 +24,7 @@
         android:hint="@string/hint_pin"
         android:padding="10dp"
         android:singleLine="true"
-        android:text="admin"
+        android:text=""
         android:textAlignment="center"
         android:textColor="@color/QRCodeBlackColor"
         android:textColorHint="@color/input_login_hint"
@@ -60,7 +60,7 @@
         android:padding="10dp"
         android:password="true"
         android:singleLine="true"
-        android:text="1234"
+        android:text=""
         android:textAlignment="center"
         android:textColor="@color/QRCodeBlackColor"
         android:textColorHint="@color/input_login_hint"
