--- a/app/src/main/res/layout/page_main.xml
+++ b/app/src/main/res/layout/page_main.xml
@@ -60,7 +60,6 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
                     android:text="Check out"
-                    app:layout_constraintBottom_toTopOf="@+id/calendar"
                     app:layout_constraintStart_toEndOf="@+id/editText"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.0" />
@@ -77,18 +76,18 @@
                     app:layout_constraintStart_toEndOf="@+id/textView2"
                     app:layout_constraintTop_toBottomOf="@+id/editText" />
 
-                <CalendarView
-                    android:id="@+id/calendar"
-                    android:layout_width="350dp"
-                    android:layout_height="332dp"
-                    android:layout_marginBottom="16dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.642"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/editText2" />
+                <!--<CalendarView-->
+                    <!--android:id="@+id/calendar"-->
+                    <!--android:layout_width="350dp"-->
+                    <!--android:layout_height="332dp"-->
+                    <!--android:layout_marginBottom="16dp"-->
+                    <!--android:layout_marginEnd="8dp"-->
+                    <!--android:layout_marginTop="8dp"-->
+                    <!--app:layout_constraintBottom_toBottomOf="parent"-->
+                    <!--app:layout_constraintEnd_toEndOf="parent"-->
+                    <!--app:layout_constraintHorizontal_bias="0.642"-->
+                    <!--app:layout_constraintStart_toStartOf="parent"-->
+                    <!--app:layout_constraintTop_toBottomOf="@+id/editText2" />-->
 
                 <TextView
                     android:id="@+id/textView2"
@@ -98,7 +97,6 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="20dp"
                     android:text="จำนวน"
-                    app:layout_constraintBottom_toTopOf="@+id/calendar"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView3"
                     app:layout_constraintVertical_bias="0.59" />
@@ -111,7 +109,6 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
                     android:text="Check in"
-                    app:layout_constraintBottom_toTopOf="@+id/calendar"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.0" />
